ServiceDemos/applicationGatewayIngController/demo-one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demoapp
  labels:
    app: demoapp
spec:
  containers:
  - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
    name: aspnetapp-image
    ports:
    - containerPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp
spec:
  selector:
    app: demoapp
  ports:
  - protocol: TCP
    port: 80
