ServiceDemos/applicationGatewayIngController/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: /
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"demoapp","namespace":"default"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"http":{"paths":[{"backend":{"service":{"name":"demo-one","port":{"number":80}}},"path":"/","pathType":"Exact"}]}}]}}
   
spec:
  ingressClassName: azure-application-gateway
  rules:
   - http:
      paths:
      - backend:
          service:
            name: demoapp
            port:
              number: 80
        path: /test
        pathType: Exact
      - backend:
          service:
            name: demoapp
            port:
              number: 80
        path: /nginx
        pathType: Exact
